# ConwayGameofLife_Cpp

./: CMakeLists.txt  main.cpp
